<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">User Application</string>
    <string name="action_settings">Settings</string>
    <string name="txt_adult">Mayor de edad</string>
    <string name="txt_single">Soltero</string>
    <string name="txt_married">Casado</string>
    <string name="txt_other">Otro</string>
    <string name="txt_checkuser">Comprobar usuario</string>
    <string name="txt_result">Resultado:</string>
    <string name="title_activity_activity_replay">Replay Result</string>
    <string name="hello_world">Hello world!</string>

</resources>